Fix scrollbar on Lighthouse panel start view
Bug: 1337277
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3711851
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/lighthouse/lighthouseStartView.css
+++ b/front_end/panels/lighthouse/lighthouseStartView.css
@@ -18,7 +18,9 @@
 }
 
 .lighthouse-start-view-fr {
-  margin: 24px;
+  padding: 24px;
+  overflow: auto;
+  height: 100%;
 }
 
 .lighthouse-start-view header {
